--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,4 +19,14 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <filter>
+  <filter-name>Authenticate</filter-name>
+  <filter-class>com.pluralsight.demos.AuthenticationFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  <filter-name>Authenticate</filter-name>
+  <url-pattern>/SecuredServlet</url-pattern>
+  </filter-mapping>
+  
 </web-app>
